@@ -56,9 +56,7 @@ local defaults = {
         EB = "Everbloom",
         TOTT = "Throne of the Tides",
         WM = "Waycrest Manor",
-        GF = "Dawn of the Infinite: Galakrond's Fall",
         FALL = "Dawn of the Infinite: Galakrond's Fall",
-        MR = "Dawn of the Infinite: Murozond's Rise",
         RISE = "Dawn of the Infinite: Murozond's Rise",
     },
     partymember = {
